# yahtzee

./: README.md  pyproject.toml
src/yahtzeeOnTerminal/: main.py
src/yahtzee_game_on_terminal/: main.py
src/yahtzee_on_terminals/: main.py
src/yahtzee_on_terminals/data/: scoresheet.csv
