[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Yahtzee_On_Terminal"
version = "0.0.1"
dependencies = [
    "pandas>=2.0.0", # Example of adding pandas with a minimum version constraint
    "numpy>=1.26.0", # Pandas also requires NumPy, python-dateutil, and tzdata
    "python-dateutil>=2.8.2",
    "tzdata>=2023.3"
]
authors = [
  { name="Lily Hirasawa", email="lhirasaw@usc.edu" },
]
description = "This package includes a famous boardgame 'Yahtzee', which is a two-player game."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ylh1029/yahtzee"