[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yahtzee_game_on_terminal"]

[tool.hatch.build.targets.wheel.force-include]
"src/yahtzee_game_on_terminal/data/scoresheet.csv" = "yahtzee_game_on_terminal/data/scoresheet.csv"

[project]
name = "Yahtzee_On_Terminal"
version = "0.0.2"
dependencies = [
    "pandas>=2.0.0", # Example of adding pandas with a minimum version constraint
    "numpy>=1.26.0", # Pandas also requires NumPy, python-dateutil, and tzdata
    "python-dateutil>=2.8.2",
    "tzdata>=2023.3"
]
authors = [
  { name="Lily Hirasawa", email="lhirasaw@usc.edu" },
]
description = "This package includes a famous boardgame 'Yahtzee', which is a two-player game."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ylh1029/yahtzee"